# mm2-ii

./: .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: check_diff.sh  compare_results.sh  print_mmi_names.py  printbit.h
src/: CMakeLists.txt  index_mm2ii.c  index_mm2ii.h  main.c
